faster tests